--- a/WindowsFormsApplication1/PizzaProject.csproj
+++ b/WindowsFormsApplication1/PizzaProject.csproj
@@ -61,6 +61,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Customer.cs" />
     <Compile Include="frmPizzaPOS.cs">
       <SubType>Form</SubType>
     </Compile>
