--- a/WindowsFormsApplication1/PizzaProject.csproj
+++ b/WindowsFormsApplication1/PizzaProject.csproj
@@ -62,6 +62,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Customer.cs" />
+    <Compile Include="frmCreditCard.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmCreditCard.Designer.cs">
+      <DependentUpon>frmCreditCard.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmPizzaPOS.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -70,6 +76,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmCreditCard.resx">
+      <DependentUpon>frmCreditCard.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmPizzaPOS.resx">
       <DependentUpon>frmPizzaPOS.cs</DependentUpon>
     </EmbeddedResource>
@@ -110,6 +119,25 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Pizzageddon.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <COMReference Include="AxWMPLib">
+      <Guid>{6BF52A50-394A-11D3-B153-00C04F79FAA6}</Guid>
+      <VersionMajor>1</VersionMajor>
+      <VersionMinor>0</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>aximp</WrapperTool>
+      <Isolated>False</Isolated>
+    </COMReference>
+    <COMReference Include="WMPLib">
+      <Guid>{6BF52A50-394A-11D3-B153-00C04F79FAA6}</Guid>
+      <VersionMajor>1</VersionMajor>
+      <VersionMinor>0</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>tlbimp</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
